uses android base64 for auth